--- a/RoboticArm/RoboticArm/RoboticArm.csproj
+++ b/RoboticArm/RoboticArm/RoboticArm.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A55F9158-F174-4AFD-A66D-2924F9CEBDEB}</ProjectGuid>
+    <ProjectGuid>{6E3E039D-CB59-4EAE-9DA4-A0090036802B}</ProjectGuid>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UseMSBuildEngine>true</UseMSBuildEngine>
     <OutputType>Library</OutputType>
@@ -30,7 +30,16 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="RoboticArm.cs" />
+    <EmbeddedResource Include="App.xaml" />
+    <EmbeddedResource Include="RoboticArmPage.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RoboticArmPage.xaml.cs">
+      <DependentUpon>RoboticArmPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
