--- a/brain/package.json
+++ b/brain/package.json
@@ -5,6 +5,7 @@
   "main": "brain.js",
   "dependencies": {
     "bleno": "^0.4.1",
+    "i2c-bus": "^1.1.2",
     "pca9685": "^2.3.0"
   },
   "devDependencies": {},
