--- a/RoboticArm/iOS/RoboticArm.iOS.csproj
+++ b/RoboticArm/iOS/RoboticArm.iOS.csproj
@@ -117,6 +117,9 @@
     <Reference Include="Prism">
       <HintPath>..\packages\Prism.Core.6.2.1\lib\Xamarin.iOS10\Prism.dll</HintPath>
     </Reference>
+    <Reference Include="Corcav.Behaviors">
+      <HintPath>..\packages\Corcav.Behaviors.2.3.4\lib\dotnet\Corcav.Behaviors.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RoboticArm\RoboticArm.csproj">
