--- a/RoboticArm/RoboticArm/packages.config
+++ b/RoboticArm/RoboticArm/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Corcav.Behaviors" version="2.3.4" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Core" version="6.2.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Prism.Unity.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8" />
