--- a/RoboticArm/iOS/packages.config
+++ b/RoboticArm/iOS/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="Corcav.Behaviors" version="2.3.4" targetFramework="xamarinios10" />
+  <package id="Plugin.BLE" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Prism.Core" version="6.2.1" targetFramework="xamarinios10" />
   <package id="Prism.Forms" version="6.2.0" targetFramework="xamarinios10" />
   <package id="Prism.Unity.Forms" version="6.2.0" targetFramework="xamarinios10" />
