--- a/RoboticArm/RoboticArm/RoboticArm.csproj
+++ b/RoboticArm/RoboticArm/RoboticArm.csproj
@@ -30,7 +30,6 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="RoboticArmPage.xaml" />
     <EmbeddedResource Include="Views\MainMasterDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -39,9 +38,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RoboticArmPage.xaml.cs">
-      <DependentUpon>RoboticArmPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoboticArmApp.cs" />
     <Compile Include="Views\MainMasterDetailPage.xaml.cs">
@@ -56,6 +52,7 @@
     </Compile>
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="Models\BLEService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
